Eliminar vinculación directa con Meta
